@@ -1,3 +1,4 @@
+20110430 tpd src/org/daly/letters/MahLetters.java add score timer
 20110430 tpd res/drawable/sound.png sound icon for menu
 20110430 tpd src/org/daly/letters/TileSound.java play sounds
 20110430 tpd src/org/daly/letters/MahLetters.java toggle sound menu item
